# memo

./: .gitignore  README.md  pyproject.toml
configs/: memo.yaml
memo/: classify.py  cli.py  commit_flow.py  config.py  models.py  proposal.py  stage.py  storage.py  summarize.py  utils.py
tests/: test_classify.py  test_integration_flow.py  test_summarize.py
