[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memo-agent"
version = "0.1.0"
description = "Local memo stage/process/review/commit workflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
memo = "memo.cli:main"

[tool.setuptools]
packages = ["memo"]
